--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,4 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Syne+Mono&display=swap');
+.syne-mono-regular {
+    font-family: "Syne Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+:root {
+
+}
+
 * {
     margin: 0;
     padding: 0;
+}
+
+.nav-bar li {
+    list-style-type: none;
+    display: inline;
+}
+
+a:link, a:visited {
+    color: var(--header-primary);
+    text-align: center;
+    text-decoration: none;
 }
